--- a/STYLE.CSS
+++ b/STYLE.CSS
@@ -9,13 +9,13 @@ body{
 }
 .container{
     width: 90vw;
-    max-width: 62.5sem;
+    max-width: 62.5em;
     position: relative;
     margin:auto;
 }
-.add-flashcard-con{
+.add-flashcard{
     display: flex;
-    justify-content: flax-end;
+    justify-content: flex-end;
     padding: 1.2em 1em;
 }
 button{
@@ -23,7 +23,7 @@ button{
     outline: none;
     cursor: pointer;
 }
-.add-flashcard-conbutton{
+.add-flashcard button{
     font-size: 18px;
     background-color: #2a2a2a;
     color: #fff;
@@ -148,7 +148,7 @@ button{
     padding: 0.6em 0;
     border-radius: 0.3em;
 }
-.button-con{
+.buttons-con{
     display: flex;
     justify-content: flex-end;
 }
